--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "args-list",
   "version": "0.1.0",
-  "description": "Extract method argument names into array.",
+  "description": "Extract method arguments names into array.",
   "main": "index.js",
   "repository": "",
   "keywords": [
