--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "args-list",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "Extract method arguments names into array.",
   "main": "index.js",
   "repository": "git@github.com:scottcorgan/args-list.git",
@@ -10,5 +10,5 @@
     "dependency"
   ],
   "author": "Scott Corgan",
-  "license": "BSD"
+  "license": "MIT"
 }
